--- a/PartialNet.ipynb
+++ b/PartialNet.ipynb
@@ -212,12 +212,12 @@
     "        return f\"{self.__class__.__name__}(p={self.p})\"\n",
     "\n",
     "#Example Usage\n",
-    "image_path = r'Dataset\\DIV2K_train_HR_bw\\0001.png'\n",
-    "image = Image.open(image_path)\n",
+    "# image_path = r'Dataset\\DIV2K_train_HR_bw\\0001.png'\n",
+    "# image = Image.open(image_path)\n",
     "\n",
-    "transform = RandomTranspose(p=0.5)\n",
-    "transformed_image = transform(image)\n",
-    "plt.imshow(transformed_image,cmap='gray')  # Show the transformed image\n"
+    "# transform = RandomTranspose(p=0.5)\n",
+    "# transformed_image = transform(image)\n",
+    "# plt.imshow(transformed_image,cmap='gray')  # Show the transformed image\n"
    ]
   },
   {
@@ -244,7 +244,7 @@
     "])\n",
     "\n",
     "class CustomDataset(Dataset):\n",
-    "    def __init__(self, root_dir, mode = 'train'):\n",
+    "    def __init__(self, root_dir, mode = 'train', blur_kernel = None, blur_sigma = None):\n",
     "        self.root_dir = root_dir\n",
     "        self.mode = mode\n",
     "        self.crop_size = train_crop_size\n",
@@ -255,7 +255,8 @@
     "            self.transform = test_data_transform\n",
     "            \n",
     "        self.image_files = [f for f in os.listdir(root_dir) if f.lower().endswith(('.png', '.jpg', '.jpeg'))]\n",
-    "\n",
+    "        self.blur_transform = transforms.GaussianBlur(blur_kernel,blur_sigma)\n",
+    "    \n",
     "    def __len__(self):\n",
     "        return len(self.image_files)\n",
     "\n",
@@ -264,12 +265,17 @@
     "        image = Image.open(img_name)\n",
     "        if self.mode == 'train':\n",
     "            images = torch.empty((self.n_crop,1,self.crop_size,self.crop_size))\n",
+    "            blur_images = torch.empty((self.n_crop,1,self.crop_size,self.crop_size))\n",
     "            for i in range(self.n_crop):\n",
     "                if self.transform:\n",
-    "                    images[i] = self.transform(image)\n",
-    "            return images\n",
+    "                    train_img = self.transform(image)\n",
+    "                    images[i] = train_img\n",
+    "                    blur_images[i] = self.blur_transform(train_img)\n",
+    "            return images, blur_images\n",
     "        else :\n",
-    "            return self.transform(image)\n",
+    "            test_image = self.transform(image)\n",
+    "            test_blur_image = self.blur_transform(test_image)\n",
+    "            return test_image, test_blur_image\n",
     "    \n"
    ]
   },
@@ -323,12 +329,17 @@
     "    latent = None \n",
     "    input = None \n",
     "    \n",
-    "    for i, input in enumerate(tqdm(dataloader)):\n",
+    "    for i, (input, input_L) in enumerate(tqdm(dataloader)):\n",
     "        input = torch.flatten(input,start_dim=0,end_dim=1)\n",
+    "        input_L = torch.flatten(input_L,start_dim=0,end_dim=1)\n",
     "        input = input.to(device)\n",
+    "        input_L = input_L.to(device)\n",
+    "        input_H = (input-input_L).to(device)\n",
+    "\n",
     "        assert len(input.shape) == 4\n",
     "        optimizer.zero_grad()\n",
-    "        output, latent = model(input)\n",
+    "        output_H, latent = model(input_H)\n",
+    "        output = output_H+input_L\n",
     "        loss, loss_detail = criterion(output, input, latent)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -342,10 +353,10 @@
     "    exp.log_metric('Train_Loss', loss,step=epoch)\n",
     "    exp.log_metric('Train_Recon_Loss', recon_loss,step=epoch)\n",
     "    exp.log_metric('Train_Regu_Loss', regu_loss,step=epoch)\n",
-    "    output = output.detach().cpu()\n",
-    "    input = input.detach().cpu()\n",
-    "    input = F.interpolate(input,scale_factor=2,mode='bicubic')\n",
-    "    output = F.interpolate(output,scale_factor=2,mode='bicubic')\n",
+    "    # output = output.detach().cpu()\n",
+    "    # input = input.detach().cpu()\n",
+    "    # input = F.interpolate(input,scale_factor=2,mode='bicubic')\n",
+    "    # output = F.interpolate(output,scale_factor=2,mode='bicubic')\n",
     "    # exp.log_image(input[0].squeeze().numpy(), name=f'train_target.png',step=epoch)\n",
     "    # exp.log_image(output[0].squeeze().numpy(), name=f'train_output.png',step=epoch)\n",
     "\n",
@@ -358,17 +369,26 @@
     "    s_recon_loss = [] \n",
     "    s_regu_loss = []\n",
     "    save_list = [1,20,22,26,28,54,61,72,93,95,97,99]\n",
-    "    for i, input in enumerate(tqdm(dataloader)):\n",
+    "    for i, (input, input_L) in enumerate(tqdm(dataloader)):\n",
     "        input = input.to(device)\n",
+    "        input_L = input_L.to(device)\n",
+    "        input_H = (input-input_L).to(device)\n",
     "        assert len(input.shape) == 4\n",
-    "        output, latent = model(input)\n",
+    "        output_H, latent = model(input_H)\n",
+    "        output = output_H+ input_L\n",
     "        loss, loss_detail = criterion(output, input, latent)\n",
     "        input = input.detach().cpu()\n",
+    "        input_L = input_L.detach().cpu()\n",
+    "        input_H = input_H.detach().cpu()\n",
     "        output = output.detach().cpu()\n",
+    "        output_H = output_H.detach().cpu()\n",
     "        latent = latent.detach().cpu().squeeze()\n",
     "        # print(latent.shape)\n",
     "        input = F.interpolate(input,scale_factor=4,mode='bicubic')\n",
+    "        input_L = F.interpolate(input_L,scale_factor=4,mode='bicubic')\n",
+    "        input_H = F.interpolate(input_H,scale_factor=4,mode='bicubic')\n",
     "        output = F.interpolate(output,scale_factor=4,mode='bicubic')\n",
+    "        output_H = F.interpolate(output_H,scale_factor=4,mode='bicubic')\n",
     "        # latent = F.interpolate(latent,scale_factor=2,mode='bicubic')\n",
     "        \n",
     "        if i in save_list:\n",
@@ -376,9 +396,11 @@
     "            n_row = 4\n",
     "            kernel = model.wn_pconv.weight_v.cpu().detach().numpy()[0]\n",
     "\n",
-    "            exp.log_image(input.squeeze().numpy(), name=f'test_{i}_input.png', step=epoch)\n",
+    "            exp.log_image(input.squeeze().numpy(), name=f'test_{i}_target.png', step=epoch)\n",
+    "            exp.log_image(input_L.squeeze().numpy(), name=f'test_{i}_input_L.png', step=epoch)\n",
+    "            exp.log_image(input_H.squeeze().numpy(), name=f'test_{i}_input_H.png', step=epoch)\n",
     "            exp.log_image(output.squeeze().numpy(), name=f'test_{i}_output.png', step=epoch )\n",
-    "            # exp.log_image(input.squeeze().numpy(), name=f'test_{i}_target.png', step=epoch)\n",
+    "            exp.log_image(output_H.squeeze().numpy(), name=f'test_{i}_output_H.png', step=epoch )\n",
     "            \n",
     "            fig, axes = plt.subplots(1,2, figsize=(10,5))\n",
     "            axes[0].imshow(input.squeeze().numpy(), cmap='gray')  \n",
@@ -482,76 +504,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(f'Train on {device}')\n",
+    "for i in range(9, 16, 3):\n",
+    "    #hyperparams \n",
+    "    hyperparams = {\n",
+    "        'model_name' : 'ResNet',\n",
+    "        'epoch' : 50, \n",
+    "        'lmbda' : 5e-4, \n",
+    "        'delta' : 0.04,\n",
+    "        'blur_kernel' : 13, \n",
+    "        'blur_sigma': 9.0, \n",
+    "        'lr' : 1e-4, \n",
+    "        'n_res_block' : 34,\n",
+    "        'ExperimentName': 'DIV2K',\n",
+    "        'load_checkpoint' : True,\n",
+    "    }\n",
     "\n",
-    "train_set = CustomDataset(root_dir=r'Dataset\\DIV2K_train_HR_bw', mode = 'train')\n",
-    "train_dataloader = DataLoader(train_set, batch_size=4, shuffle=True)\n",
-    "test_set = CustomDataset(root_dir=r'Dataset\\DIV2K_valid_HR_bw',  mode = 'test')\n",
-    "test_dataloader = DataLoader(test_set, batch_size=1, shuffle=False)\n",
-    "#hyperparams \n",
-    "hyperparams = {\n",
-    "    'model_name' : 'ResNet',\n",
-    "    'epoch' : 150, \n",
-    "    'lmbda' : 1e-5, \n",
-    "    'delta' : 0.04,\n",
-    "    'lr' : 1e-4, \n",
-    "    'n_res_block' : 34,\n",
-    "    'ExperimentName': 'DIV2K',\n",
-    "    'load_checkpoint' : True,\n",
-    "}\n",
-    "folder_name = f'checkpoints/lambda_{hyperparams[\"lmbda\"]}_ResNet_{hyperparams[\"n_res_block\"]}_delta_{hyperparams[\"delta\"]}'\n",
-    "if not os.path.exists(folder_name):\n",
-    "    os.mkdir(folder_name)\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    print(f'Train on {device}')\n",
     "\n",
-    "if hyperparams['model_name'] == 'ResNet' :\n",
-    "    model = ResNet(n_res_block=hyperparams['n_res_block']).to(device)\n",
-    "elif hyperparams['model_name'] == 'SimpleNet':\n",
-    "    model = SimpleNet().to(device)\n",
-    "    \n",
-    "# Define loss function and optimizer\n",
-    "criterion = SCLoss(lmbda=hyperparams['lmbda'], delta = hyperparams['delta'])\n",
-    "optimizer = optim.Adam(model.parameters(), lr = hyperparams['lr'])\n",
+    "    train_set = CustomDataset(root_dir=r'Dataset\\DIV2K_train_HR_bw', mode = 'train', blur_kernel = hyperparams['blur_kernel'], blur_sigma = hyperparams['blur_sigma'])\n",
+    "    train_dataloader = DataLoader(train_set, batch_size=4, shuffle=True)\n",
+    "    test_set = CustomDataset(root_dir=r'Dataset\\DIV2K_valid_HR_bw',  mode = 'test', blur_kernel = hyperparams['blur_kernel'], blur_sigma = hyperparams['blur_sigma'])\n",
+    "    test_dataloader = DataLoader(test_set, batch_size=1, shuffle=False)\n",
     "\n",
-    "# init comet \n",
-    "comet_ml.init()\n",
-    "exp = comet_ml.Experiment(api_key='NGgjeGxw7n1xPCoFUz4XUU4Zv',project_name = 'partialconv')\n",
-    "exp.log_parameters(hyperparams)\n",
-    "exp.set_model_graph(model)\n",
-    "exp.log_code('PartialNet.ipynb')\n",
+    "    folder_name = f'checkpoints/lambda_{hyperparams[\"lmbda\"]}_delta_{hyperparams[\"delta\"]}_gaussian_{hyperparams[\"blur_kernel\"]}_{hyperparams[\"blur_sigma\"]}'\n",
+    "    if not os.path.exists(folder_name):\n",
+    "        os.mkdir(folder_name)\n",
     "\n",
-    "last_epoch = 0\n",
-    "#train and testing \n",
-    "if load_checkpoint:\n",
-    "    checkpoint_dir = f'{folder_name}'\n",
-    "    latest_checkpoint_path = find_latest_checkpoint(checkpoint_dir)\n",
-    "    if latest_checkpoint_path is not None:\n",
-    "        model, optimizer, last_epoch, loss, recon_losses, regu_losses = load_checkpoint(model, optimizer, latest_checkpoint_path)\n",
-    "    else :\n",
-    "        print('no checkpoint found')\n",
-    "## print kernel \n",
+    "    if hyperparams['model_name'] == 'ResNet' :\n",
+    "        model = ResNet(n_res_block=hyperparams['n_res_block']).to(device)\n",
+    "    elif hyperparams['model_name'] == 'SimpleNet':\n",
+    "        model = SimpleNet().to(device)\n",
+    "        \n",
+    "    # Define loss function and optimizer\n",
+    "    criterion = SCLoss(lmbda=hyperparams['lmbda'], delta = hyperparams['delta'])\n",
+    "    optimizer = optim.Adam(model.parameters(), lr = hyperparams['lr'])\n",
     "\n",
-    "for epoch in range(last_epoch, hyperparams['epoch']):\n",
-    "    try:\n",
-    "        test_result_path = os.path.join(folder_name, 'result')\n",
-    "        if not os.path.exists(test_result_path):\n",
-    "            os.mkdir(test_result_path)\n",
-    "        train_loss, train_loss_detail = train(model,train_dataloader,criterion,optimizer,epoch,device,exp)\n",
-    "        if epoch %5 == 0 :\n",
-    "            test(model,test_dataloader,criterion,device,epoch,exp, test_result_path)\n",
-    "            if epoch % 10 == 0:\n",
-    "                torch.save({\n",
-    "                    'epoch': epoch,\n",
-    "                    'model_state_dict': model.state_dict(),\n",
-    "                    'optimizer_state_dict': optimizer.state_dict(),\n",
-    "                    'loss': train_loss,\n",
-    "                    'recon_losses': train_loss_detail['Reconstruction'],\n",
-    "                    'regu_losses': train_loss_detail['Regularization'],            \n",
-    "                    }, f'{folder_name}/{epoch}.pth')\n",
-    "    except KeyboardInterrupt:\n",
-    "        exp.end()\n",
-    "        break \n",
-    "exp.end()"
+    "    # init comet \n",
+    "    comet_ml.init()\n",
+    "    exp = comet_ml.Experiment(api_key='NGgjeGxw7n1xPCoFUz4XUU4Zv',project_name = 'partialconv')\n",
+    "    exp.log_parameters(hyperparams)\n",
+    "    exp.set_model_graph(model)\n",
+    "    exp.log_code('PartialNet.ipynb')\n",
+    "\n",
+    "    last_epoch = 0\n",
+    "    #train and testing \n",
+    "    if load_checkpoint:\n",
+    "        checkpoint_dir = f'{folder_name}'\n",
+    "        latest_checkpoint_path = find_latest_checkpoint(checkpoint_dir)\n",
+    "        if latest_checkpoint_path is not None:\n",
+    "            model, optimizer, last_epoch, loss, recon_losses, regu_losses = load_checkpoint(model, optimizer, latest_checkpoint_path)\n",
+    "        else :\n",
+    "            print('no checkpoint found')\n",
+    "\n",
+    "    # test_result_path = os.path.join(folder_name, 'result')\n",
+    "    # test(model,test_dataloader,criterion,device,last_epoch,exp, test_result_path)\n",
+    "\n",
+    "    for epoch in range(last_epoch, hyperparams['epoch']):\n",
+    "        try:\n",
+    "            test_result_path = os.path.join(folder_name, 'result')\n",
+    "            if not os.path.exists(test_result_path):\n",
+    "                os.mkdir(test_result_path)\n",
+    "            train_loss, train_loss_detail = train(model,train_dataloader,criterion,optimizer,epoch,device,exp)\n",
+    "            if epoch %5 == 0 :\n",
+    "                test(model,test_dataloader,criterion,device,epoch,exp, test_result_path)\n",
+    "                if epoch % 10 == 0:\n",
+    "                    torch.save({\n",
+    "                        'epoch': epoch,\n",
+    "                        'model_state_dict': model.state_dict(),\n",
+    "                        'optimizer_state_dict': optimizer.state_dict(),\n",
+    "                        'loss': train_loss,\n",
+    "                        'recon_losses': train_loss_detail['Reconstruction'],\n",
+    "                        'regu_losses': train_loss_detail['Regularization'],            \n",
+    "                        }, f'{folder_name}/{epoch}.pth')\n",
+    "        except KeyboardInterrupt:\n",
+    "            exp.end()\n",
+    "            break \n",
+    "    exp.end()"
    ]
   },
   {
@@ -560,26 +589,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#experiment 2 \n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(f'Train on {device}')\n",
-    "\n",
-    "train_set = CustomDataset(root_dir=r'Dataset\\DIV2K_train_HR_bw', mode = 'train')\n",
-    "train_dataloader = DataLoader(train_set, batch_size=4, shuffle=True)\n",
-    "test_set = CustomDataset(root_dir=r'Dataset\\DIV2K_valid_HR_bw',  mode = 'test')\n",
-    "test_dataloader = DataLoader(test_set, batch_size=1, shuffle=False)\n",
     "#hyperparams \n",
     "hyperparams = {\n",
     "    'model_name' : 'ResNet',\n",
-    "    'epoch' : 150, \n",
-    "    'lmbda' : 1e-5, \n",
-    "    'delta' : 0.06,\n",
+    "    'epoch' : 50, \n",
+    "    'lmbda' : 5e-4, \n",
+    "    'delta' : 0.04,\n",
+    "    'blur_kernel' : 9, \n",
+    "    'blur_sigma': 9.0, \n",
     "    'lr' : 1e-4, \n",
     "    'n_res_block' : 34,\n",
     "    'ExperimentName': 'DIV2K',\n",
     "    'load_checkpoint' : True,\n",
     "}\n",
-    "folder_name = f'checkpoints/lambda_{hyperparams[\"lmbda\"]}_ResNet_{hyperparams[\"n_res_block\"]}_delta_{hyperparams[\"delta\"]}'\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f'Train on {device}')\n",
+    "\n",
+    "train_set = CustomDataset(root_dir=r'Dataset\\DIV2K_train_HR_bw', mode = 'train', blur_kernel = hyperparams['blur_kernel'], blur_sigma = hyperparams['blur_sigma'])\n",
+    "train_dataloader = DataLoader(train_set, batch_size=4, shuffle=True)\n",
+    "test_set = CustomDataset(root_dir=r'Dataset\\DIV2K_valid_HR_bw',  mode = 'test', blur_kernel = hyperparams['blur_kernel'], blur_sigma = hyperparams['blur_sigma'])\n",
+    "test_dataloader = DataLoader(test_set, batch_size=1, shuffle=False)\n",
+    "\n",
+    "folder_name = f'checkpoints/lambda_{hyperparams[\"lmbda\"]}_delta_{hyperparams[\"delta\"]}_gaussian_{hyperparams[\"blur_kernel\"]}_{hyperparams[\"blur_sigma\"]}'\n",
     "if not os.path.exists(folder_name):\n",
     "    os.mkdir(folder_name)\n",
     "\n",
