--- a/PartialNet.ipynb
+++ b/PartialNet.ipynb
@@ -160,28 +160,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### visualize the kernels in Pconv\n",
-    "def visTensor(tensor, ch=0, allkernels=False, nrow=8, padding=1): \n",
-    "    n,c,w,h = tensor.shape\n",
-    "\n",
-    "    if allkernels: tensor = tensor.view(n*c, -1, w, h)\n",
-    "    elif c != 3: tensor = tensor[:,ch,:,:].unsqueeze(dim=1)\n",
-    "\n",
-    "    rows = np.min((tensor.shape[0] // nrow + 1, 64))    \n",
-    "    grid = utils.make_grid(tensor, nrow=nrow, normalize=True, padding=padding)\n",
-    "    plt.figure( figsize=(nrow,rows) )\n",
-    "    plt.imshow(grid.numpy().transpose((1, 2, 0)))\n",
-    "\n",
-    "kernels = model.wn_pconv.weight.cpu().detach().clone()\n",
-    "visTensor(kernels)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "class RandomTranspose(torch.nn.Module):\n",
     "    \"\"\"Transpose the given image randomly with a given probability.\n",
     "    If the image is torch Tensor, it is expected\n",
@@ -235,13 +213,11 @@
     "    transforms.RandomHorizontalFlip(p=0.5),\n",
     "    transforms.RandomVerticalFlip(p=0.5),\n",
     "    RandomTranspose(p=0.5),\n",
-    "    transforms.ToTensor(),\n",
     "])\n",
-    "\n",
     "test_data_transform = transforms.Compose([\n",
     "    transforms.CenterCrop((test_crop_size, test_crop_size)),\n",
-    "    transforms.ToTensor(),\n",
     "])\n",
+    "\n",
     "\n",
     "class CustomDataset(Dataset):\n",
     "    def __init__(self, root_dir, mode = 'train', blur_kernel = None, blur_sigma = None):\n",
@@ -256,6 +232,8 @@
     "            \n",
     "        self.image_files = [f for f in os.listdir(root_dir) if f.lower().endswith(('.png', '.jpg', '.jpeg'))]\n",
     "        self.blur_transform = transforms.GaussianBlur(blur_kernel,blur_sigma)\n",
+    "        self.toTensor = transforms.ToTensor()\n",
+    "\n",
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.image_files)\n",
@@ -269,13 +247,17 @@
     "            for i in range(self.n_crop):\n",
     "                if self.transform:\n",
     "                    train_img = self.transform(image)\n",
-    "                    images[i] = train_img\n",
-    "                    blur_images[i] = self.blur_transform(train_img)\n",
+    "                    blur_image = self.blur_transform(train_img)\n",
+    "                    images[i] = self.toTensor(train_img)\n",
+    "                    blur_images[i] = self.toTensor(blur_image)\n",
+    "                    \n",
     "            return images, blur_images\n",
     "        else :\n",
     "            test_image = self.transform(image)\n",
     "            test_blur_image = self.blur_transform(test_image)\n",
-    "            return test_image, test_blur_image\n",
+    "            test_image = self.toTensor(test_image)\n",
+    "            test_blur_image = self.toTensor(test_blur_image)\n",
+    "            return test_image,  test_blur_image\n",
     "    \n"
    ]
   },
@@ -314,6 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# train and test code \n",
     "losses = []\n",
     "recon_losses = []\n",
@@ -335,11 +318,12 @@
     "        input = input.to(device)\n",
     "        input_L = input_L.to(device)\n",
     "        input_H = (input-input_L).to(device)\n",
-    "\n",
+    "        \n",
     "        assert len(input.shape) == 4\n",
     "        optimizer.zero_grad()\n",
     "        output_H, latent = model(input_H)\n",
     "        output = output_H+input_L\n",
+    "        # print(f'output_shape:{output.shape}, output_H.range = {output_H.min(), output_H.max()}')\n",
     "        loss, loss_detail = criterion(output, input, latent)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -349,16 +333,29 @@
     "        exp.log_metric('InTrain_Loss', loss,step=i,epoch=epoch)\n",
     "        exp.log_metric('InTrain_Recon_Loss', recon_loss, step=i,epoch=epoch)\n",
     "        exp.log_metric('InTrain_Regu_Loss', regu_loss, step=i,epoch=epoch)\n",
-    "            \n",
+    "        if i %10 == 0 :\n",
+    "            input = input.detach().cpu()\n",
+    "            input_L = input_L.detach().cpu()\n",
+    "            input_H = input_H.detach().cpu()\n",
+    "            output = output.detach().cpu()\n",
+    "            output_H = output_H.detach().cpu()\n",
+    "            latent = latent.detach().cpu().squeeze()\n",
+    "            input = F.interpolate(input,scale_factor=4,mode='bicubic')\n",
+    "            input_L = F.interpolate(input_L,scale_factor=4,mode='bicubic')\n",
+    "            input_H = F.interpolate(input_H,scale_factor=4,mode='bicubic')\n",
+    "            output = F.interpolate(output,scale_factor=4,mode='bicubic')\n",
+    "            output_H = F.interpolate(output_H,scale_factor=4,mode='bicubic')\n",
+    "            input_H = (input_H-input_H.min())/(input_H.max()-input_H.min())\n",
+    "            output_H = (output_H-output_H.min())/(output_H.max()-output_H.min())\n",
+    "            exp.log_image(input[0].squeeze().numpy(), image_minmax=(0,1),name=f'train_{i}_target.png', step=epoch)\n",
+    "            exp.log_image(input_L[0].squeeze().numpy(), name=f'train_{i}_input_L.png', step=epoch)\n",
+    "            exp.log_image(input_H[0].squeeze().numpy(), name=f'train_{i}_input_H.png', step=epoch)\n",
+    "            exp.log_image(output[0].squeeze().numpy(), image_minmax=(0,1), name=f'train_{i}_output.png', step=epoch )\n",
+    "            exp.log_image(output_H[0].squeeze().numpy(), name=f'train_{i}_output_H.png', step=epoch )\n",
     "    exp.log_metric('Train_Loss', loss,step=epoch)\n",
     "    exp.log_metric('Train_Recon_Loss', recon_loss,step=epoch)\n",
     "    exp.log_metric('Train_Regu_Loss', regu_loss,step=epoch)\n",
-    "    # output = output.detach().cpu()\n",
-    "    # input = input.detach().cpu()\n",
-    "    # input = F.interpolate(input,scale_factor=2,mode='bicubic')\n",
-    "    # output = F.interpolate(output,scale_factor=2,mode='bicubic')\n",
-    "    # exp.log_image(input[0].squeeze().numpy(), name=f'train_target.png',step=epoch)\n",
-    "    # exp.log_image(output[0].squeeze().numpy(), name=f'train_output.png',step=epoch)\n",
+    "    \n",
     "\n",
     "    \n",
     "    return loss, loss_detail\n",
@@ -376,7 +373,9 @@
     "        assert len(input.shape) == 4\n",
     "        output_H, latent = model(input_H)\n",
     "        output = output_H+ input_L\n",
-    "        loss, loss_detail = criterion(output, input, latent)\n",
+    "        loss, loss_detail = criterion(input_L, input, latent)\n",
+    "        # loss, loss_detail = criterion(output, input, latent)\n",
+    "        \n",
     "        input = input.detach().cpu()\n",
     "        input_L = input_L.detach().cpu()\n",
     "        input_H = input_H.detach().cpu()\n",
@@ -391,15 +390,18 @@
     "        output_H = F.interpolate(output_H,scale_factor=4,mode='bicubic')\n",
     "        # latent = F.interpolate(latent,scale_factor=2,mode='bicubic')\n",
     "        \n",
+    "        \n",
     "        if i in save_list:\n",
     "            n_display = 16\n",
     "            n_row = 4\n",
     "            kernel = model.wn_pconv.weight_v.cpu().detach().numpy()[0]\n",
-    "\n",
-    "            exp.log_image(input.squeeze().numpy(), name=f'test_{i}_target.png', step=epoch)\n",
+    "            \n",
+    "            input_H = (input_H+input_H.min())/(input_H.max()-input_H.min())\n",
+    "            output_H = (output_H+output_H.min())/(output_H.max()-output_H.min())\n",
+    "            exp.log_image(input.squeeze().numpy(), image_minmax=(0,1),name=f'test_{i}_target.png', step=epoch)\n",
     "            exp.log_image(input_L.squeeze().numpy(), name=f'test_{i}_input_L.png', step=epoch)\n",
-    "            exp.log_image(input_H.squeeze().numpy(), name=f'test_{i}_input_H.png', step=epoch)\n",
-    "            exp.log_image(output.squeeze().numpy(), name=f'test_{i}_output.png', step=epoch )\n",
+    "            exp.log_image(input_H.squeeze().numpy(),  name=f'test_{i}_input_H.png', step=epoch)\n",
+    "            exp.log_image(output.squeeze().numpy(), image_minmax=(0,1), name=f'test_{i}_output.png', step=epoch )\n",
     "            exp.log_image(output_H.squeeze().numpy(), name=f'test_{i}_output_H.png', step=epoch )\n",
     "            \n",
     "            fig, axes = plt.subplots(1,2, figsize=(10,5))\n",
@@ -449,10 +451,7 @@
     "    exp.log_metric('Test_Regu_Loss', np.mean(s_regu_loss),step=epoch)\n",
     "                    \n",
     "    print(f\"Test Epoch {epoch+1}, Loss: {np.mean(s_loss):.4f}, Recon_Loss: {np.mean(s_recon_loss):.4f}, Regu_Loss: {np.mean(s_regu_loss):.4f}\")\n",
-    "\n",
-    "\n",
-    "  \n",
-    "                "
+    "\n"
    ]
   },
   {
@@ -504,99 +503,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(9, 16, 3):\n",
-    "    #hyperparams \n",
-    "    hyperparams = {\n",
-    "        'model_name' : 'ResNet',\n",
-    "        'epoch' : 50, \n",
-    "        'lmbda' : 5e-4, \n",
-    "        'delta' : 0.04,\n",
-    "        'blur_kernel' : 13, \n",
-    "        'blur_sigma': 9.0, \n",
-    "        'lr' : 1e-4, \n",
-    "        'n_res_block' : 34,\n",
-    "        'ExperimentName': 'DIV2K',\n",
-    "        'load_checkpoint' : True,\n",
-    "    }\n",
-    "\n",
-    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    print(f'Train on {device}')\n",
-    "\n",
-    "    train_set = CustomDataset(root_dir=r'Dataset\\DIV2K_train_HR_bw', mode = 'train', blur_kernel = hyperparams['blur_kernel'], blur_sigma = hyperparams['blur_sigma'])\n",
-    "    train_dataloader = DataLoader(train_set, batch_size=4, shuffle=True)\n",
-    "    test_set = CustomDataset(root_dir=r'Dataset\\DIV2K_valid_HR_bw',  mode = 'test', blur_kernel = hyperparams['blur_kernel'], blur_sigma = hyperparams['blur_sigma'])\n",
-    "    test_dataloader = DataLoader(test_set, batch_size=1, shuffle=False)\n",
-    "\n",
-    "    folder_name = f'checkpoints/lambda_{hyperparams[\"lmbda\"]}_delta_{hyperparams[\"delta\"]}_gaussian_{hyperparams[\"blur_kernel\"]}_{hyperparams[\"blur_sigma\"]}'\n",
-    "    if not os.path.exists(folder_name):\n",
-    "        os.mkdir(folder_name)\n",
-    "\n",
-    "    if hyperparams['model_name'] == 'ResNet' :\n",
-    "        model = ResNet(n_res_block=hyperparams['n_res_block']).to(device)\n",
-    "    elif hyperparams['model_name'] == 'SimpleNet':\n",
-    "        model = SimpleNet().to(device)\n",
-    "        \n",
-    "    # Define loss function and optimizer\n",
-    "    criterion = SCLoss(lmbda=hyperparams['lmbda'], delta = hyperparams['delta'])\n",
-    "    optimizer = optim.Adam(model.parameters(), lr = hyperparams['lr'])\n",
-    "\n",
-    "    # init comet \n",
-    "    comet_ml.init()\n",
-    "    exp = comet_ml.Experiment(api_key='NGgjeGxw7n1xPCoFUz4XUU4Zv',project_name = 'partialconv')\n",
-    "    exp.log_parameters(hyperparams)\n",
-    "    exp.set_model_graph(model)\n",
-    "    exp.log_code('PartialNet.ipynb')\n",
-    "\n",
-    "    last_epoch = 0\n",
-    "    #train and testing \n",
-    "    if load_checkpoint:\n",
-    "        checkpoint_dir = f'{folder_name}'\n",
-    "        latest_checkpoint_path = find_latest_checkpoint(checkpoint_dir)\n",
-    "        if latest_checkpoint_path is not None:\n",
-    "            model, optimizer, last_epoch, loss, recon_losses, regu_losses = load_checkpoint(model, optimizer, latest_checkpoint_path)\n",
-    "        else :\n",
-    "            print('no checkpoint found')\n",
-    "\n",
-    "    # test_result_path = os.path.join(folder_name, 'result')\n",
-    "    # test(model,test_dataloader,criterion,device,last_epoch,exp, test_result_path)\n",
-    "\n",
-    "    for epoch in range(last_epoch, hyperparams['epoch']):\n",
-    "        try:\n",
-    "            test_result_path = os.path.join(folder_name, 'result')\n",
-    "            if not os.path.exists(test_result_path):\n",
-    "                os.mkdir(test_result_path)\n",
-    "            train_loss, train_loss_detail = train(model,train_dataloader,criterion,optimizer,epoch,device,exp)\n",
-    "            if epoch %5 == 0 :\n",
-    "                test(model,test_dataloader,criterion,device,epoch,exp, test_result_path)\n",
-    "                if epoch % 10 == 0:\n",
-    "                    torch.save({\n",
-    "                        'epoch': epoch,\n",
-    "                        'model_state_dict': model.state_dict(),\n",
-    "                        'optimizer_state_dict': optimizer.state_dict(),\n",
-    "                        'loss': train_loss,\n",
-    "                        'recon_losses': train_loss_detail['Reconstruction'],\n",
-    "                        'regu_losses': train_loss_detail['Regularization'],            \n",
-    "                        }, f'{folder_name}/{epoch}.pth')\n",
-    "        except KeyboardInterrupt:\n",
-    "            exp.end()\n",
-    "            break \n",
-    "    exp.end()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#hyperparams \n",
     "hyperparams = {\n",
     "    'model_name' : 'ResNet',\n",
-    "    'epoch' : 50, \n",
+    "    'epoch' : 75, \n",
     "    'lmbda' : 5e-4, \n",
     "    'delta' : 0.04,\n",
-    "    'blur_kernel' : 9, \n",
-    "    'blur_sigma': 9.0, \n",
+    "    'blur_kernel' : 7, \n",
+    "    'blur_sigma': 7, \n",
     "    'lr' : 1e-4, \n",
     "    'n_res_block' : 34,\n",
     "    'ExperimentName': 'DIV2K',\n",
@@ -640,7 +554,9 @@
     "        model, optimizer, last_epoch, loss, recon_losses, regu_losses = load_checkpoint(model, optimizer, latest_checkpoint_path)\n",
     "    else :\n",
     "        print('no checkpoint found')\n",
-    "## print kernel \n",
+    "\n",
+    "test_result_path = os.path.join(folder_name, 'result')\n",
+    "test(model,test_dataloader,criterion,device,last_epoch,exp, test_result_path)\n",
     "\n",
     "for epoch in range(last_epoch, hyperparams['epoch']):\n",
     "    try:\n",
@@ -663,105 +579,6 @@
     "        exp.end()\n",
     "        break \n",
     "exp.end()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = ResNet(n_res_block=34).to(device)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "\n",
-    "checkpoint_dir = 'checkpoints'\n",
-    "checkpoint_path = find_latest_checkpoint(checkpoint_dir)\n",
-    "# Load the checkpoint\n",
-    "checkpoint = torch.load(checkpoint_path)\n",
-    "# Load model state dictionary\n",
-    "model.load_state_dict(checkpoint['model_state_dict'])\n",
-    "kernel = model.wn_pconv.weight_v.cpu().detach().numpy()[0]  \n",
-    "\n",
-    "# images = [np.random.rand(7, 7) for _ in range(128)]\n",
-    "\n",
-    "# Creating a figure and axes\n",
-    "fig, axes = plt.subplots(16, 8, figsize=(8, 16))\n",
-    "\n",
-    "# Loop through the grid and plot each image\n",
-    "for i, ax in enumerate(axes.flat):\n",
-    "    ax.imshow(kernel[i], cmap='gray')  # Display the image\n",
-    "    ax.axis('off')  # Hide the axis\n",
-    "\n",
-    "# Adjust layout with some gap\n",
-    "plt.subplots_adjust(wspace=0.2, hspace=0.2)\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Plot latent \n",
-    "frames = []\n",
-    "for output in outputs:\n",
-    "    image = Image.fromarray((output*255).astype(np.uint8),mode='L')\n",
-    "    frames.append(image)\n",
-    "frames[0].save('output.gif', save_all=True, append_images=frames[1:], duration=300, loop=0)\n",
-    "frames = []\n",
-    "for output in latents:\n",
-    "    c,h,w = output.shape \n",
-    "    ncols = 8\n",
-    "    fig, ax = plt.subplots(nrows=c//ncols, ncols=ncols, figsize=(1*ncols, 1*c//ncols),dpi=80 )\n",
-    "    for epoch in range(c//ncols):\n",
-    "        for j in range(ncols):\n",
-    "            ax[epoch,j].axis('off')\n",
-    "            ax[epoch,j].imshow(output[epoch*ncols+j],cmap='gray',vmin=output[epoch*ncols+j].min(), vmax=output[epoch*ncols+j].max())\n",
-    "    fig.tight_layout()\n",
-    "    fig.canvas.draw()\n",
-    "    image = Image.frombytes('RGB', fig.canvas.get_width_height(),fig.canvas.tostring_rgb())\n",
-    "    frames.append(image)\n",
-    "frames[0].save('latent.gif', save_all=True, append_images=frames[1:], duration=300, loop=0)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#plot residual in ResNet\n",
-    "frames = []\n",
-    "if hyperparams[\"model_name\"] == 'ResNet':\n",
-    "    for output in res_latents:\n",
-    "        c,h,w = output.shape \n",
-    "        ncols = 8\n",
-    "        fig, ax = plt.subplots(nrows=c//ncols, ncols=ncols, figsize=(1*ncols, 1*c//ncols),dpi=80 )\n",
-    "        for epoch in range(c//ncols):\n",
-    "            for j in range(ncols):\n",
-    "                ax[epoch,j].axis('off')\n",
-    "                ax[epoch,j].imshow(output[epoch*ncols+j],cmap='gray',vmin=output[epoch*ncols+j].min(), vmax=output[epoch*ncols+j].max())\n",
-    "        fig.tight_layout()\n",
-    "        fig.canvas.draw()\n",
-    "        image = Image.frombytes('RGB', fig.canvas.get_width_height(),fig.canvas.tostring_rgb())\n",
-    "        frames.append(image)\n",
-    "frames[0].save('residual_latent.gif', save_all=True, append_images=frames[1:], duration=300, loop=0)"
    ]
   }
  ],
